src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Literacy_Nimbus_Programs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Literacy Nimbus Programs</label>
        <referenceTo>lit__Program__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Days_AFT_1st_Sem__c</fullName>
        <label>Program Days AFT 1st Sem</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Days_AFT_2nd_Sem__c</fullName>
        <formula>Program_Days_AFT_Total__c  -  Program_Days_AFT_1st_Sem__c</formula>
        <label>Program Days AFT 2nd Sem</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Days_AFT_Total__c</fullName>
        <label>Program Days AFT Total</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Days_SUM_Total__c</fullName>
        <label>Program Days SUM Total</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Descriptor__c</fullName>
        <formula>TEXT( Program_Type__c ) &amp;&quot;-&quot;&amp; TEXT ( Program_Year__c ) &amp;&quot;-&quot;&amp; TEXT ( Program_Location__c ) &amp;&quot;-&quot;&amp; TEXT ( Program_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Descriptor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Group__c</fullName>
        <label>Program Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elem Gr 1-5</fullName>
                </value>
                <value>
                    <fullName>Elem Gr 1-6</fullName>
                </value>
                <value>
                    <fullName>Youth Gr 6-8</fullName>
                </value>
                <value>
                    <fullName>Youth Gr 6-9</fullName>
                </value>
                <value>
                    <fullName>Lite Gr 10-12</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Location__c</fullName>
        <label>Program Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Sites</fullName>
                </value>
                <value>
                    <fullName>Stone Mountain UMC</fullName>
                </value>
                <value>
                    <fullName>North Spring UMC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUM</fullName>
                </value>
                <value>
                    <fullName>AFT</fullName>
                </value>
                <value>
                    <fullName>LIT</fullName>
                </value>
                <value>
                    <fullName>INT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Year__c</fullName>
        <label>Program Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_End__c</fullName>
        <label>Registration End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Start__c</fullName>
        <label>Registration Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Enrolled__c</fullName>
        <label>Total Enrolled</label>
        <summaryFilterItems>
            <field>Participant_Intern_Record__c.Status__c</field>
            <operation>equals</operation>
            <value>Enrolled, Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Participant_Intern_Record__c.Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program_Location__c</columns>
        <columns>Program_Group__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Program_Descriptor__c</columns>
        <columns>Program_Group__c</columns>
        <columns>Program_Location__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2016_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_Location__c</columns>
        <columns>Total_Enrolled__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Group__c</columns>
        <columns>Program_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>2016 Programs</label>
    </listViews>
    <listViews>
        <fullName>X2017_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_Location__c</columns>
        <columns>Total_Enrolled__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Group__c</columns>
        <columns>Program_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>2017 Programs</label>
    </listViews>
    <listViews>
        <fullName>X2018_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_Location__c</columns>
        <columns>Total_Enrolled__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Year__c</columns>
        <columns>Program_Group__c</columns>
        <columns>Program_Days_SUM_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>2018 Programs</label>
    </listViews>
    <nameField>
        <displayFormat>PID-{000000}</displayFormat>
        <label>PID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>